# kelcoro

./: CMakeLists.txt  CMakePresets.json
docs/: coro.md
examples/: CMakeLists.txt  task_with_backtrace.cpp
include/kelcoro/: thread_pool.hpp
